--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "private": true,
   "devDependencies": {
-    "apache-server-configs": "^2.7.1",
-    "connect": "^3.0.1",
-    "connect-livereload": "^0.6.0",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-cache": "^0.4.6",
-    "gulp-csso": "^3.0.0",
-    "gulp-filter": "^5.0.0",
-    "gulp-flatten": "^0.3.1",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.2.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.5.0",
+    "apache-server-configs": "^3.2.1",
+    "connect": "^3.7.0",
+    "connect-livereload": "^0.6.1",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-cache": "^1.1.3",
+    "gulp-csso": "^4.0.1",
+    "gulp-filter": "^6.0.0",
+    "gulp-flatten": "^0.4.0",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-livereload": "^4.0.2",
+    "gulp-load-plugins": "^2.0.2",
     "gulp-minify-html": "^1.0.6",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-size": "^2.1.0",
-    "gulp-uglify": "^2.1.2",
-    "gulp-useref": "^3.1.2",
-    "main-bower-files": "^2.1.0",
-    "opn": "^4.0.2",
-    "serve-index": "^1.1.4",
-    "serve-static": "^1.4.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-size": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-useref": "^4.0.1",
+    "main-bower-files": "^2.13.3",
+    "open": "^7.0.3",
+    "serve-index": "^1.9.1",
+    "serve-static": "^1.14.1",
     "wiredep": "^4.0.0"
   }
 }
